[gd_scene load_steps=19 format=3 uid="uid://be00xo37bqmst"]

[ext_resource type="Texture2D" uid="uid://caoe3sp82gigl" path="res://assets/sprites/cowboy.png" id="1_3w0m0"]
[ext_resource type="Script" path="res://scripts/cowboy.gd" id="1_5djls"]
[ext_resource type="Script" path="res://scripts/GunTip.gd" id="3_8y3au"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5by2c"]
atlas = ExtResource("1_3w0m0")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujngd"]
atlas = ExtResource("1_3w0m0")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea46k"]
atlas = ExtResource("1_3w0m0")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvfe8"]
atlas = ExtResource("1_3w0m0")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhnhv"]
atlas = ExtResource("1_3w0m0")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ety3"]
atlas = ExtResource("1_3w0m0")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u0bv"]
atlas = ExtResource("1_3w0m0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fyqp"]
atlas = ExtResource("1_3w0m0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v5se"]
atlas = ExtResource("1_3w0m0")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnhrv"]
atlas = ExtResource("1_3w0m0")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx0cv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5by2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujngd")
}],
"loop": true,
"name": &"aim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea46k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvfe8")
}],
"loop": true,
"name": &"aim_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhnhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ety3")
}],
"loop": true,
"name": &"aim_up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u0bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fyqp")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhrv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0sa12"]
radius = 18.1108

[sub_resource type="CircleShape2D" id="CircleShape2D_akxs7"]
radius = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxmmf"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.533333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cg8ql"]
bg_color = Color(0.6, 1, 0.6, 1)

[node name="Cowboy" type="CharacterBody2D"]
platform_floor_layers = 4294967040
script = ExtResource("1_5djls")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -31)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_kx0cv")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_0sa12")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_akxs7")
debug_color = Color(0.87451, 0.290196, 0.486275, 0.419608)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -55.0
offset_top = -88.0
offset_right = 53.0
offset_bottom = -81.0
theme_override_styles/background = SubResource("StyleBoxFlat_fxmmf")
theme_override_styles/fill = SubResource("StyleBoxFlat_cg8ql")
value = 100.0
show_percentage = false

[node name="GunTip" type="Marker2D" parent="."]
script = ExtResource("3_8y3au")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
